--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,11 +1,12 @@
 doctype html
 html(lang="en")
     head
-        title Главная
+        title Выборщик
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible" content="ie=edge")
         link(href="./styles.min.css" type="text/css" rel="stylesheet")
     body
         div(class="wrapper")
+            include ./blocks/header.pug
         script(src="./scripts.min.js" type="text/javascript")
