--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "Gilroy";
+  src: url("./fonts/gilroy-bold.ttf.ttf");
+  font-weight: bold;
+  font-style: normal;
+}
 .btn {
   border: 0.125rem solid #4285f4;
   padding: 0.75rem 1rem;
