--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -27,9 +27,8 @@ html(lang="en")
                             div(class="filter")
                                 div(class="filter__parameter filter__weight")
                                     h3(class="filter__parameter-heading") Фильтр1
-                                    //- <input class="form-control" name="price" id="price">
                                     div(class="filter__slider")
-                                        div(class="filter__bar" data-start="0" data-end="120")
+                                        div(class="filter__bar" data-max="120")
                                             div(class="filter__lp" data-pos="0.2")
                                             div(class="filter__rp" data-pos="0.8")
                                     div(class="filter__values-wrap")
@@ -38,12 +37,12 @@ html(lang="en")
                                 div(class="filter__parameter filter__price")
                                     h3(class="filter__parameter-heading") Стоимость
                                     div(class="filter__slider")
-                                        div(class="filter__bar" data-start="0" data-end="71000000")
+                                        div(class="filter__bar" data-max="70000000")
                                             div(class="filter__lp" data-pos="0.2")
                                             div(class="filter__rp" data-pos="0.8")
                                     div(class="filter__values-wrap")
-                                        span(class="filter__value-lp") 1 500 &#8381;
-                                        span(class="filter__value-rp") 64 500 000 &#8381;
+                                        span(class="filter__value-lp") 34 кг
+                                        span(class="filter__value-rp") 120 кг
                                 div(class="filter__parameter")
                                     h3(class="filter__parameter-heading") Количество
                                     ul(class="filter__quantity-list")
