--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,13 +15,13 @@
 }
 @font-face {
   font-family: "Gilroy";
-  src: url("./fonts/gilroy-regular.ttf.ttf");
+  src: url("./fonts/gilroy-regular.ttf");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Gilroy";
-  src: url("./fonts/gilroy-bold.ttf.ttf");
+  src: url("./fonts/gilroy-bold.ttf");
   font-weight: bold;
   font-style: normal;
 }
@@ -37,7 +37,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 1rem;
-    color: #2F80ED;
+    color: #2f80ed;
     white-space: nowrap;
   }
 }
