--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -132,37 +132,41 @@
       margin: 0;
     }
   }
-  &__slider{
-    width:100%;
-    height:0.125rem;
-    background: #E7F7E0;
-    position:relative;
-    margin:0 1rem 1.25rem 1rem;
+  &__slider {
+    width: 100%;
+    height: 0.125rem;
+    background: #e7f7e0;
+    margin: 0 0rem 1.25rem 0rem;
   }
-  &__slider &__bar{
-    position:absolute;
-    left:3rem;
-    background: #4285F4;
-    height:100%;
+  &__scroll {
+    width: 100%;
   }
-  &__slider &__bar &__lp,&__slider &__bar &__rp{
-    cursor:pointer;
-    background:rgba(66, 133, 244, 1);
-    width:0.625rem;
-    height:0.625rem;
-    border:0.1875rem solid #d0e1fc;
-    border-radius:100%;
-    position:absolute;
-    line-height:400%;
-    color:white;
-    user-select:none;
+  &__bar {
+    background: #4285f4;
+    height: 100%;
+    flex: 1 1 auto;
+    margin: 0 1rem;
+    position: relative;
   }
-  &__slider &__bar &__lp{
-    left:0px;
+  &__lp,
+  &__rp {
+    cursor: pointer;
+    background: rgba(66, 133, 244, 1);
+    width: 0.625rem;
+    height: 0.625rem;
+    border: 0.1875rem solid #d0e1fc;
+    border-radius: 100%;
+    position: absolute;
+    line-height: 400%;
+    color: white;
+    user-select: none;
+  }
+  &__lp {
+    left: -0.3125rem;
     top: -0.25rem;
   }
-  &__slider &__bar &__rp{
-    left:100%;
+  &__rp {
+    right: -0.3125rem;
     top: -0.25rem;
   }
 }
@@ -196,6 +200,7 @@
       font-size: 1.125rem;
       color: #14451f;
       text-align: center;
+      white-space: nowrap;
     }
   }
   &__body {
