--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,4 @@
-.selection {
+.visual-select {
   width: 100%;
   &__header {
     display: flex;
@@ -14,16 +14,46 @@
   &__heading {
     font-family: "Gilroy", sans-serif;
     font-style: normal;
-    font-weight: bold;
     font-size: 3.375rem;
     color: #0d3264;
+    position: relative;
     @include tablets {
       margin-bottom: 2rem;
       text-align: center;
       font-size: 2.7rem;
+      width: 100%;
+      overflow: hidden;
     }
     @include phones {
       font-size: 2.2rem;
+    }
+    &-bg {
+      font-family: inherit;
+      font-weight: 800;
+      font-size: 6.25rem;
+      white-space: nowrap;
+      position: absolute;
+      color: #2f80ed;
+      opacity: 0.05;
+      top: 50%;
+      left: -3.5rem;
+      pointer-events: none;
+      transform: translate(0, -50%);
+      @include tablets {
+        left: 0;
+      }
+      @include phones {
+        font-size: 4.25rem;
+      }
+    }
+    &-front {
+      font-family: inherit;
+      font-weight: bold;
+      font-size: 3.375rem;
+      color: #0d3264;
+      @include phones {
+        font-size: 2.375rem;
+      }
     }
   }
   &__type {
@@ -48,186 +78,302 @@
       }
     }
   }
-  &__wrap {
-    display: flex;
-    @include tablets {
-      flex-direction: column;
-      align-items: center;
+  &__content {
+    width: 100%;
+    height: 33.75rem;
+    background-image: url(./imgs/visual-bg.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat no-repeat;
+    margin-bottom: 2.1875rem;
+  }
+  &__list {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  &__item {
+    position: absolute;
+    border-radius: 0 0.1875rem 0.1875rem 0;
+    background: #fff;
+    padding: 0.5rem 0.75rem;
+    font-size: 0.75rem;
+    font-family: "Gilroy", sans-serif;
+    font-weight: bold;
+    color: #2d9cdb;
+    cursor: pointer;
+    &::before {
+      display: block;
+      padding: 0.5rem 0.5rem 0.5rem 0.75rem;
+      background: #2f80ed;
+      color: #fff;
+      border-radius: 0.1875rem;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      font-size: 1rem;
+      transform: translate(-95%, -50%);
+      z-index: 10;
+    }
+    &:nth-child(1) {
+      left: 25%;
+      top: 75%;
+      &::before {
+        content: "1";
+      }
+    }
+    &:nth-child(2) {
+      left: 27%;
+      top: 54%;
+      &::before {
+        content: "1";
+      }
+    }
+    &:nth-child(3) {
+      left: 51%;
+      top: 67%;
+      &::before {
+        content: "2";
+      }
+    }
+    &:nth-child(4) {
+      left: 51%;
+      top: 50%;
+      &::before {
+        content: "2";
+      }
+    }
+    &:nth-child(5) {
+      left: 39%;
+      top: 19%;
+      &::before {
+        content: "3";
+      }
+    }
+    &:nth-child(6) {
+      left: 72%;
+      top: 58%;
+      &::before {
+        content: "4";
+      }
     }
   }
-  &__aside {
-    display: flex;
-    flex-direction: column;
-    margin-right: 3.75rem;
-    max-width: 17.5rem;
+  &__sublist {
     width: 100%;
-    @include tablets {
-      margin: 0 0 2rem 0;
+    height: 100%;
+    position: relative;
+  }
+  &__subitem {
+    position: absolute;
+    border-radius: 0 0.1875rem 0.1875rem 0;
+    background: #fff;
+    padding: 0.375rem;
+    font-size: 1.375rem;
+    font-family: "Gilroy", sans-serif;
+    font-weight: bold;
+    color: #2d9cdb;
+    cursor: pointer;
+    &::before {
+      display: block;
+      padding: 0.5rem 0.5rem 0.5rem 0.75rem;
+      background: #2f80ed;
+      color: #fff;
+      border-radius: 0.1875rem;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      font-size: 1.75rem;
+      transform: translate(-95%, -50%);
+      z-index: 10;
     }
-    &-btn {
-      background: #4285f4;
-      justify-content: center;
-      & .btn-text {
-        color: #fff;
-        margin: 0;
+    &:nth-child(1) {
+      left: 71%;
+      top: 36%;
+      &::before {
+        content: "18";
+      }
+    }
+    &:nth-child(2) {
+      left: 40%;
+      top: 7%;
+      @include tablets {
+        top: 20%;
+      }
+      &::before {
+        content: "19";
+      }
+    }
+    &:nth-child(3) {
+      left: 20%;
+      top: 7%;
+      &::before {
+        content: "20";
       }
     }
   }
 }
-.filter {
-  margin-bottom: 1.25rem;
-  border-radius: 0.1875rem;
-  border: 0.0625rem solid #4285f4;
-  padding: 2.5rem 1rem;
-  &__parameter {
-    margin-bottom: 1.75rem;
+.breadcrumbs {
+  display: flex;
+  align-items: center;
+  @include tablets {
+    margin-bottom: 2rem;
+  }
+  &__back {
+    border-radius: 0.1875rem;
+    border: 0.09375rem solid #2f80ed;
+    padding: 0.675rem;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    & .active {
-      background: #4285f4;
-      color: #fff;
+    justify-content: center;
+    margin-right: 3.375rem;
+  }
+  &__list {
+    display: flex;
+    align-items: center;
+    @include phones {
+      flex-wrap: wrap;
     }
-    &-heading {
-      font-family: "Gilroy", sans-serif;
-      font-weight: normal;
-      font-size: 1.125rem;
-      color: #000000;
-      margin-bottom: 1.25rem;
+    & .active {
+      font-weight: bold;
     }
   }
-  &__values-wrap {
+  &__item {
+    font-family: "Gilroy", sans-serif;
+    font-size: 1.125rem;
+    margin-right: 0.5rem;
+    white-space: nowrap;
+  }
+}
+.product {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 4.4375rem;
+  margin-bottom: 3rem;
+  @include tablets {
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+  &__name {
+    font-family: "Gilroy", sans-serif;
+    font-weight: bold;
+    color: #2d9cdb;
+    font-size: 2rem;
+  }
+  &__btn-wrap {
     display: flex;
     width: 100%;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-start;
+    @include tablets{
+      justify-content: center;
+    }
   }
-  &__value-lp,
-  &__value-rp {
-    font-family: "Gilroy", sans-serif;
-    font-weight: normal;
-    font-size: 0.875rem;
-    color: #000000;
-    border-bottom: 0.03125rem solid #4285f4;
-  }
-  &__quantity-list {
-    display: flex;
+  &__btn {
+    max-width: 14.75rem;
+    width: 100%;
     justify-content: center;
-  }
-  &__quantity-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.625rem 0.6875rem;
-    border-radius: 0.1875rem;
-    border: 0.0625rem solid #4285f4;
-    font-family: "Gilroy", sans-serif;
-    font-weight: normal;
-    font-size: 1rem;
-    color: #000;
-    margin-right: 1.75rem;
-    cursor: pointer;
-    &:last-child {
+    &--blue{
+      background: #2F80ED;
+      margin-right: 1.5rem;
+      & .btn-text{
+        color: #fff;
+      }
+    }
+    & .btn-text {
       margin: 0;
     }
   }
-  &__slider {
+  &__sidebar {
+    max-width: 18.875rem;
     width: 100%;
-    height: 0.125rem;
-    background: #e7f7e0;
-    margin: 0 0rem 1.25rem 0rem;
-  }
-  &__scroll {
-    width: 100%;
-  }
-  &__bar {
-    background: #4285f4;
-    height: 100%;
-    flex: 1 1 auto;
-    margin: 0 1rem;
-    position: relative;
-  }
-  &__lp,
-  &__rp {
-    cursor: pointer;
-    background: rgba(66, 133, 244, 1);
-    width: 0.625rem;
-    height: 0.625rem;
-    border: 0.1875rem solid #d0e1fc;
-    border-radius: 100%;
-    position: absolute;
-    line-height: 400%;
-    color: white;
-    user-select: none;
-  }
-  &__lp {
-    left: -0.3125rem;
-    top: -0.25rem;
-  }
-  &__rp {
-    right: -0.3125rem;
-    top: -0.25rem;
-  }
-}
-.results {
-  width: 100%;
-  max-height: 30.625rem;
-  overflow: scroll;
-  padding-right: 3rem;
-  overflow-x: hidden;
-  @include tablets {
-    padding: 0 1rem 1rem 0;
-    overflow-x: scroll;
-  }
-  &__table {
-    width: 100%;
-  }
-  &__header {
-    border-bottom: 0.03125rem solid rgba(20, 69, 31, 0.5);
-    &-price {
-      cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    @include tablets {
+      margin-bottom: 2rem;
     }
-    &-list {
-      width: 100%;
-    }
-    &-item {
-      padding: 0 1rem 1.5rem 1rem;
+  }
+  &__list-par {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 3rem;
+  }
+  &__item-par {
+    margin-bottom: 1rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  &__par {
+    font-family: "Gilroy", sans-serif;
+    font-size: 1rem;
+    width: 60%;
+    margin-right: 1rem;
+    &-value {
       font-family: "Gilroy", sans-serif;
-      font-weight: normal;
       font-size: 1.125rem;
-      color: #14451f;
-      text-align: center;
-      white-space: nowrap;
-      @include phones{
-        padding-bottom: 1rem;
-      }
+      font-weight: bold;
+      color: #2f80ed;
+      width: 40%;
+      display: flex;
+      justify-content: flex-start;
     }
   }
-  &__body {
-    &-list {
-      width: 100%;
-      border-radius: 2px;
-    }
+  &__pazzles {
+    width: 16.5rem;
+    height: 7.5rem;
+    position: relative;
     &-item {
-      padding: 0.875rem 0;
-      text-align: center;
-      font-family: "Gilroy", sans-serif;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 0.875rem;
-      color: #000000;
-      cursor: pointer;
-      &:first-child {
-        border-radius: 0.1875rem 0 0 0.1875rem;
+      position: absolute;
+      &:nth-child(1) {
+        top: 11%;
+        right: 92%;
       }
-      &:last-child {
-        border-radius: 0 0.1875rem 0.1875rem 0;
+      &:nth-child(2) {
+        top: 70%;
+        right: 49%;
+      }
+      &:nth-child(3) {
+        top: 80%;
+        right: 49%;
+      }
+      &:nth-child(4) {
+        top: 72%;
+        right: 30%;
+      }
+      &:nth-child(5) {
+        top: 63%;
+        right: 11%;
+      }
+      &:nth-child(6) {
+        top: 54%;
+        right: 0;
+      }
+      &:nth-child(7) {
+        top: 28%;
+        right: 0;
+      }
+      &:nth-child(8) {
+        top: 0;
+        right: 0;
+      }
+    }
+    &-value {
+      font-family: "Gilroy", sans-serif;
+      font-size: 1.0625rem;
+      color: #fff;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    &-icon {
+      fill: #c4c4c4;
+      .active & {
+        fill: #2f80ed;
       }
     }
   }
-}
-.active .results__body-item {
-  background: #4285f4;
-  color: #fff;
 }
