--- a/src/pug/select.pug
+++ b/src/pug/select.pug
@@ -12,9 +12,14 @@ html(lang="en")
             div(class="container")
                 div(class="visual-select")
                     div(class="visual-select__header")
-                        div(class="visual-select__heading")
-                            h1(class="visual-select__heading-bg") Выбор продукта
-                            h1(class="visual-select__heading-front") Выбор продукта
+                        div(class="breadcrumbs")
+                            a(class="breadcrumbs__back")
+                                svg(width="20" height="20" viewBox="0 0 20 20")
+                                    use(xlink:href="./imgs/sprites.svg#back")
+                            ul(class="breadcrumbs__list")
+                                li(class="breadcrumbs__item active") Выбор продукта &#92;
+                                li(class="breadcrumbs__item") 4TK &#92;
+                                li(class="breadcrumbs__item") 19 корпус &#92;
                         div(class="visual-select__type")
                             button(class="btn visual-select__type-btn")
                                 svg(width="17" height="19" viewBox="0 0 17 19")
@@ -25,10 +30,7 @@ html(lang="en")
                                     use(xlink:href="./imgs/sprites.svg#visual")
                                 span(class="btn-text") Визуальный подбор
                     div(class="visual-select__content")
-                        ul(class="visual-select__list")
-                            li(class="visual-select__item") 1 ТК
-                            li(class="visual-select__item") 2 ТК
-                            li(class="visual-select__item") 1 ТК
-                            li(class="visual-select__item") 2 ТК
-                            li(class="visual-select__item") 1 ТК
-                            li(class="visual-select__item") 1 ТК          
+                        ul(class="visual-select__sublist")
+                            li(class="visual-select__subitem") секция
+                            li(class="visual-select__subitem") секция
+                            li(class="visual-select__subitem") секция     
