--- a/src/pug/product-page.pug
+++ b/src/pug/product-page.pug
@@ -23,7 +23,7 @@ html(lang="en")
                                 li(class="breadcrumbs__item") период 5 &#92;
                                 li(class="breadcrumbs__item") 9 этап
                         h1(class="product__name") Продукт 214
-                    div(class="product")
+                    div(class="product product-page")
                         aside(class="product__sidebar")
                             ul(class="product__list-par")
                                 li(class="product__item-par")
